DS 小红书代码

--- a/deepseek/api/rag_milvus_deepseek.ipynb
+++ b/deepseek/api/rag_milvus_deepseek.ipynb
@@ -30,6 +30,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "50bfe7ac-3c5a-4320-968c-e044d2df8cb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "设置环境变量 \n",
+    "export HF_ENDPOINT=https://hf-mirror.com\n",
+    "export DEEPSEEK_API_KEY=\"XXXXXX\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "9c18d7b4",
    "metadata": {},
@@ -110,7 +122,7 @@
     }
    ],
    "source": [
-    "!pip install \"pymilvus[model]==2.5.10\" openai==1.82.0 requests==2.32.3 tqdm==4.67.1 torch==2.7.0"
+    "!pip install \"pymilvus[model]==2.5.10\" openai==1.82.0 requests==2.32.3 tqdm==4.67.1 torch==2.7.0 -i https://pypi.tuna.tsinghua.edu.cn/simple "
    ]
   },
   {
@@ -273,6 +285,10 @@
     }
    ],
    "source": [
+    "import os\n",
+    "\n",
+    "os.environ[\"HF_ENDPOINT\"] = \"https://hf-mirror.com\"\n",
+    "\n",
     "from pymilvus import model as milvus_model\n",
     "\n",
     "embedding_model = milvus_model.DefaultEmbeddingFunction()"
@@ -800,7 +816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
