--- a/deepseek/rednote/rednote.ipynb
+++ b/deepseek/rednote/rednote.ipynb
@@ -631,35 +631,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "063ec247-775b-434d-a0db-313ccfefc58f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 格式化后的小红书文案 (Markdown) ---\n",
-      "## ✨ 28天逆袭冷白皮！这款美白精华让我告别暗沉痘印 🌟\n",
-      "\n",
-      "姐妹们！我终于找到了我的本命美白精华！💖\n",
-      "\n",
-      "作为一个常年熬夜➕痘印困扰的混油皮，肤色暗沉一直是我的心头大患。直到遇见了这款美白精华，简直打开了新世界的大门！🤩\n",
-      "\n",
-      "🌟 核心成分：烟酰胺+VC衍生物，双管齐下，提亮肤色效果绝绝子！\n",
-      "💧 质地轻薄到爆炸，上脸秒吸收，完全不会黏腻，油皮姐妹放心冲！\n",
-      "🌿 用了28天，痘印肉眼可见变淡了，整张脸都透亮了起来，素颜也能打！\n",
-      "\n",
-      "使用方法也很简单：早晚洁面后，滴2-3滴在手心，轻轻按压上脸，后续再叠加保湿产品就OK啦～\n",
-      "\n",
-      "真心推荐给所有想要均匀肤色、告别暗沉的姐妹！入股不亏！💖\n",
-      "\n",
-      "#美白精华 #提亮肤色 #淡化痘印 #护肤好物 #冷白皮\n",
-      "\n",
-      "--- 格式化错误示例 ---\n",
-      "错误：无法解析 JSON 字符串 - Expecting property name enclosed in double quotes: line 1 column 2 (char 1)\n",
-      "原始字符串：\n",
-      "{'title': 'Test', 'body': 'This is not valid json'}\n"
+     "ename": "NameError",
+     "evalue": "name 'format_rednote_for_markdown' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m      3\u001b[39m generated_json_output = \u001b[33m\"\"\"\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[33m{\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[33m  \u001b[39m\u001b[33m\"\u001b[39m\u001b[33mtitle\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m: \u001b[39m\u001b[33m\"\u001b[39m\u001b[33m✨ 28天逆袭冷白皮！这款美白精华让我告别暗沉痘印 🌟\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m,\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m      9\u001b[39m \u001b[33m}\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[33m\"\"\"\u001b[39m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# 调用格式化函数\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m markdown_note = \u001b[43mformat_rednote_for_markdown\u001b[49m(generated_json_output)\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# 打印结果\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m--- 格式化后的小红书文案 (Markdown) ---\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'format_rednote_for_markdown' is not defined"
      ]
     }
    ],
@@ -810,7 +794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
